--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,15 @@
 .list {
   width: 300px;
-  border: solid 1px;
+  border: solid 1px #dbdbdb;
+  background-color: #f6f7f8;
   margin: 0;
   list-style-type: none;
   padding: 0;
 }
 
 .card {
-  box-shadow: 0 2px 8px 0 #00000040;
+  background-color: white;
+  box-shadow: 0 1px 5px 0 #00000040;
   margin: 16px;
   padding: 12px;
   border-radius: 4px;
@@ -54,10 +56,6 @@
 .head {
   display: flex;
   padding-bottom: 8px;
-  /* background-position: 120% center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url(./back.png); */
   border-radius: 4px 4px 0 0;
   align-items: center;
   border-bottom: 1px solid gray;
@@ -98,9 +96,10 @@
 }
 
 .expired {
-  background-color: #fbfbfb;
+  background-color: #f2f2f2;
   filter: grayscale(1);
   color: #999;
+  box-shadow: #ccccccbf 0px 1px 5px 0px;
 }
 
 .read {
@@ -108,4 +107,38 @@
   background-repeat: no-repeat;
   background-position: right -12px bottom -17px;
   background-size: 62px;
+}
+
+.sort-bar {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 16px;
+  background-color: white;
+  box-shadow: 0 2px 4px #00000014;
+}
+
+.mini-icon {
+  width: 12px;
+  height: 12px;
+  padding: 5px 12px;
+  background-color: #f6f7f8;
+  border-radius: 4px;
+  cursor: pointer;
+  fill: #62676e;
+}
+
+.mini-icon:hover {
+  background-color: #e3e5e7;
+  transition: all 0.2s ease-in-out;
+}
+
+.title {
+  line-height: 2.5;
+  flex: 1;
+}
+
+.sort-bar,
+.list {
+  border-radius: 6px;
 }
